<resources>
    <string name="app_name">StackCracker</string>
    <string name="add_task">Add Task to Stack</string>
    <string name="add_tasks">Add Tasks</string>
    <string name="name">Name</string>
    <string name="notes">Notes</string>
    <string name="date">Date:</string>
    <string name="choose">Choose</string>
    <string name="makeStack">Make Stack</string>
    <string name="finish">Finished?</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="status">Status:</string>
    <string name="no_date_set">No Date Set</string>
    <string name="not_started">Not Started</string>
    <string name="started">Started</string>
    <string name="in_progress">In Progress</string>
    <string name="testing_me">Testing by Sathya</string>
    <string name="testing_ben">Testing by Ben</string>
    <string name="finished">Finished</string>
    <string name="edit">Edit</string>
    <string name="categories">Categories:</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="add_category">Add Category</string>
    <string name="settings">Settings</string>
    <string name="delete_category">Delete Category</string>
    <string name="no_category">No Category</string>
    <string name="no_categories_yet">No Categories Yet!</string>
    <string name="delete_category_note">Note: All tasks under a deleted category will be removed from that category!</string>
</resources>
