<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0b3ff"
    tools:background="#f0b3ff"
    tools:context="com.clairvoyance.stackcracker.EditTaskActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/add_task_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#8f00b3"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintBottom_toTopOf="@+id/main_scrollview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/add_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#8f00b3"
        android:textColor="#ffffff"
        android:text="@string/add_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ScrollView
        android:id="@+id/main_scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#f0b3ff"
        app:layout_constraintBottom_toTopOf="@id/add_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_task_toolbar">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/note_text"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/notes"
                android:inputType="textMultiLine"
                android:textColorHint="#000000" />

            <TextView
                android:id="@+id/date_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:paddingEnd="4dp"
                android:paddingStart="6dp"
                android:text="@string/date"
                android:textColorHint="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingEnd="4dp"
                android:paddingStart="6dp"
                android:text="@string/no_date_set"
                android:textSize="18sp" />

            <Button
                android:id="@+id/choose_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/choose" />

            <TextView
                android:id="@+id/categories_head"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:paddingEnd="4dp"
                android:paddingStart="6dp"
                android:text="@string/categories"
                android:textColorHint="#000000"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
